--- a/clock.html
+++ b/clock.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="Task Manager, Projects, html, javascript, tailwindcss">
   <meta name="author" content="Biprangshu Das">
-  <title>Home | PlanIT</title>
+  <title>Clock | PlanIT</title>
   <link rel="shortcut icon" href="assets/pngegg.png" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
-  <link rel="stylesheet" href="css/style1.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -18,8 +19,8 @@
   <!--navbar starts-->
   <nav class="bg-[#77A661] rounded-lg my-2 mx-3 sm:mx-10">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-      <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="assets/pngegg.png" class="h-8" alt="Flowbite Logo" />
+      <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <img src="assets/pngegg.png" class="h-8" alt="PlanIT Logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">PlanIT</span>
       </a>
       <button data-collapse-toggle="navbar-dropdown" type="button"
@@ -37,7 +38,7 @@
         <ul
           class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-300 rounded-lg bg-[#668b55e0] md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-[#77A661]">
           <li>
-            <a href="#"
+            <a href="index.html"
               class="block py-2 px-3 text-white bg-[#8CA874] rounded md:bg-transparent md:text-black md:p-0 md:dark:bg-transparent"
               aria-current="page">Home</a>
           </li>
@@ -54,7 +55,7 @@
               class="z-10 hidden font-normal bg-gray-500 divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
               <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                 <li>
-                  <a href="#"
+                  <a href="index.html"
                     class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
                 </li>
                 <li>
@@ -89,21 +90,13 @@
   </nav>
   <!--navbar ends-->
   <!--main content starts-->
-  <main class="flex max-h-screen max-w-screen-2xl my-20 sm:mx-10">
-    <div class="left px-5 py-10">
-      <p class="font-medium text-5xl lg:text-7xl antialiased leading-snug sm:leading-snug py-5 items-center">Your
-        Tasks,<br><span class="tagline text-green-600">Planned.</span></p>
-      <p
-        class="font-normal sm:font-normal text-lg sm:text-xl lg:text-2xl opacity-70 antialiased leading-tight py-3 items-center">
-        Plan your tasks, anytime, anywhere <br> and stay productive, using <span
-          class="tagline text-green-600 font-bold opacity-100">PlanIT</span>.</p>
-      <a href=""><button
-          class="btn bg-green-600 px-5 py-3 rounded-lg text-white antialiased hover:cursor-pointer sm:transform sm:transition-all sm:duration-300 sm:ease-in-out sm:hover:scale-110 sm:active:translate-y-1 shadow-lg">START
-          NOW</button></a>
+  <main class="flex flex-col items-center justify-center min-h-screen space-y-5">
+    <div id="clockarea" class="text-center py-10 text-2xl">
+      <p class="text-2xl sm:text-3xl lg:text-5xl">The <span class="text-[#8CA874]">time</span> right now is:</p>
     </div>
-    <div class="right hidden sm:inline-block sm:ml-auto sm:my-auto sm:mr-10">
-      <img src="assets/pngegg.png" alt="PlanIT Logo" class="h-64 w-64">
-    </div>
+    <div id="timearea"
+      class="text-7xl sm:text-8xl lg:text-9xl text-center text-[#4e702d] font-mono sm:px-5 sm:py-5 sm:rounded-lg"
+      style="text-shadow: 0 3px 5px rgba(0, 0, 0, 0.082);"></div>
   </main>
   <!--main content ends-->
   <!--footer starts-->
@@ -116,10 +109,12 @@
         </a>
         <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-white">
           <li>
-            <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline me-4 md:me-6">About Me</a>
+            <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline me-4 md:me-6">About
+              Me</a>
           </li>
           <li>
-            <a href="https://github.com/jarvis1704/PlanIT.git" class="hover:underline me-4 md:me-6">Check out the Source Code</a>
+            <a href="https://github.com/jarvis1704/PlanIT.git" class="hover:underline me-4 md:me-6">Check out the Source
+              Code</a>
           </li>
           <li>
             <a href="https://github.com/jarvis1704" class="hover:underline me-4 md:me-6">My Projects</a>
@@ -132,7 +127,8 @@
       <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
       <div class="footerlinks flex flex-wrap space-y-2 sm:space-y-0 sm:justify-between">
         <span class="space-x-4 text-lg sm:text-xl">
-          <a href="https://www.linkedin.com/in/biprangshu-das-34017427a/" id="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/biprangshu-das-34017427a/" id="linkedin"><i
+              class="fa-brands fa-linkedin"></i></a>
           <a href="https://twitter.com/DasBiprangshu" id="twitter"><i class="fa-brands fa-x-twitter"></i></a>
           <a href="https://github.com/jarvis1704" id="github"><i class="fa-brands fa-github"></i></a>
         </span>
@@ -143,8 +139,9 @@
     </div>
   </footer>
   <!--footer ends-->
-  <script src="js/script1.js"></script>
 
+  <script src="js/script1.js"></script>
+  <script src="js/script2.js"></script>
 </body>
 
 </html>
