--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <nav class="bg-[#77A661] rounded-lg my-2 mx-3 sm:mx-10">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="assets/pngegg.png" class="h-8" alt="Flowbite Logo" />
+        <img src="assets/pngegg.png" class="h-8" alt="" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">PlanIT</span>
       </a>
       <button data-collapse-toggle="navbar-dropdown" type="button"
