added the tasks page

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         Plan your tasks, anytime, anywhere <br> and stay productive, using <span
           class="tagline text-green-600 font-bold opacity-100">PlanIT</span>.</p>
       <a href=""><button
-          class="btn bg-green-600 px-5 py-3 rounded-lg text-white antialiased hover:cursor-pointer sm:transform sm:transition-all sm:duration-300 sm:ease-in-out sm:hover:scale-110 sm:active:translate-y-1 shadow-lg">START
+          class="btn bg-green-600 px-5 py-3 rounded-lg text-white antialiased hover:cursor-pointer sm:transform sm:transition-all sm:duration-300 sm:ease-in-out sm:hover:scale-110 sm:active:translate-y-1 hover:bg-green-700 shadow-lg">START
           NOW</button></a>
     </div>
     <div class="right hidden sm:inline-block sm:ml-auto sm:my-auto sm:mr-10">
@@ -132,9 +132,9 @@
       <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
       <div class="footerlinks flex flex-wrap space-y-2 sm:space-y-0 sm:justify-between">
         <span class="space-x-4 text-lg sm:text-xl">
-          <a href="https://www.linkedin.com/in/biprangshu-das-34017427a/" id="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="https://twitter.com/DasBiprangshu" id="twitter"><i class="fa-brands fa-x-twitter"></i></a>
-          <a href="https://github.com/jarvis1704" id="github"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/biprangshu-das-34017427a/" id="linkedin" class=""><i class="fa-brands fa-linkedin hover:text-white"></i></a>
+          <a href="https://twitter.com/DasBiprangshu" id="twitter" class=""><i class="fa-brands fa-x-twitter hover:text-white"></i></a>
+          <a href="https://github.com/jarvis1704" id="github" class=""><i class="fa-brands fa-github hover:text-white"></i></a>
         </span>
         <span class="block text-sm text-white sm:text-end dark:text-white my-1 ml-auto">© 2024 <a href=""
             class="hover:underline">Biprangshu Das</a>. All Rights Reserved.</span>
