--- a/tasks.html
+++ b/tasks.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tasks | PlanIT</title>
   <link rel="shortcut icon" href="assets/pngegg.png" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="style3.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Remainders| PlanIT</title>
 </head>
-
-<body class="bg-gray-300">
+<body class="bg-gray-200">
   <!--navbar starts-->
   <nav class="bg-[#77A661] rounded-lg my-2 mx-3 sm:mx-10">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-      <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="assets/pngegg.png" class="h-8" alt="PlanIT Logo" />
+      <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <img src="assets/pngegg.png" class="h-8" alt="" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">PlanIT</span>
       </a>
       <button data-collapse-toggle="navbar-dropdown" type="button"
@@ -36,7 +31,7 @@
         <ul
           class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-300 rounded-lg bg-[#668b55e0] md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-[#77A661]">
           <li>
-            <a href="index.html"
+            <a href="#"
               class="block py-2 px-3 text-white bg-[#8CA874] rounded md:bg-transparent md:text-black md:p-0 md:dark:bg-transparent"
               aria-current="page">Home</a>
           </li>
@@ -53,7 +48,7 @@
               class="z-10 hidden font-normal bg-gray-500 divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
               <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                 <li>
-                  <a href="index.html"
+                  <a href="#"
                     class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
                 </li>
                 <li>
@@ -87,27 +82,28 @@
     </div>
   </nav>
   <!--navbar ends-->
-  <!--main starts-->
-  <main class=" flex flex-col h-full w-screen px-1">
-    <section class="reminderadder flex items-center justify-center sm:justify-center sm:items-center space-x-5 px-3 py-2 my-5">
-      <input type="text" placeholder="Add note to Remainders. Click add to save" maxlength="100" minlength="1" class="sm:w-1/2 px-5 py-2 rounded-lg border-black active:border focus:outline-none focus:outline-blue-400" id="remindertext">
-      <button type="submit" id="reminderadd" class="px-4 py-2 bg-green-600 rounded-lg mr-3 text-white transform transition-all ease-in-out duration-300 hover:bg-green-700 active:translate-y-1">Add</button>
+  <main class="flex flex-col h-full w-screen px-1">
+    <section class="flex items-center justify-center sm:justify-center sm:items-center space-x-5 px-3 py-2 my-2" id="taskadderarea">
+      <input type="text" placeholder="Add task to 'Tasks'. Click add or enter to save" id="tasktext" maxlength="100" minlength="1" class="hidden sm:block sm:w-1/2 px-5 py-2 rounded-md  border-black active:border focus:outline-none focus:outline-blue-400">
+      <input type="text" placeholder="Add task to 'Tasks'." id="tasktext" maxlength="100" minlength="1" class="sm:hidden px-3 py-3 rounded-lg border-black active:border focus:outline-none focus:outline-blue-400">
+      <button type="submit" id="taskadd" class="bg-green-600 px-3 py-2 rounded-lg mr-3 text-white transform transition-all duration-300 ease-in-out hover:bg-green-700 active:translate-y-1">Add</button>
     </section>
-    <hr class="bg-gray-400 h-0.5 rounded-md my-4">
-    <section class="currentreminder my-5">
-      <div class="flex flex-col items-center text-center space-y-2" id="reminderarea">
-        <p class="flex text-start w-screen px-2 text-gray-500">Current Remainders: </p>
+    <hr class="bg-gray-400 rounded-md h-0.5">
+    <section class="my-5" id="currenttaskarea">
+      <div id="taskarea" class="flex flex-col space-y-2 items-center text-center">
+        <p class="flex text-start w-screen px-2 text-gray-500">Current Tasks:</p>
+        <div class="reminder mx-auto outline-blue-500 rounded-md px-5 py-2 font-serif bg-blue-200 my-5 flex space-x-4"><input type="checkbox" class="done" name="done">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae quidem mollitia quaerat minus debitis id!</div>
       </div>
     </section>
-    <hr class="bg-gray-400 h-0.5 rounded-md my-4">
-    <section class="donereminder my-3">
-      <div class="flex flex-col items-center text-center space-y-2" id="completedreminder">
-        <p class="flex text-start w-screen px-2 text-gray-500">Done Remainders: </p>
+    <hr class="bg-gray-400 rounded-md h-0.5">
+    <section id="completedtaskarea my-3">
+      <div id="donetask" class="flex flex-col items-center text-center space-y-2">
+        <p class="flex text-start w-screen text-gray-500">Completed Tasks: </p>
+        <div class="donereminder mx-auto outline-blue-500 rounded-md px-5 py-2 font-serif line-through text-gray-300 bg-green-100 my-5 flex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum sapiente eveniet vero laudantium hic velit!</div>
       </div>
     </section>
-    <hr class="bg-gray-400 h-0.5 rounded-md my-4">
+    <hr class="h-0.5 bg-gray-400 rounded-md my-4">
   </main>
-  <!--Main Ends-->
   <!--footer starts-->
   <footer class="bg-[#77A661] rounded-lg shadow m-4">
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
@@ -118,12 +114,10 @@
         </a>
         <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-white">
           <li>
-            <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline me-4 md:me-6">About
-              Me</a>
+            <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline me-4 md:me-6">About Me</a>
           </li>
           <li>
-            <a href="https://github.com/jarvis1704/PlanIT.git" class="hover:underline me-4 md:me-6">Check out the Source
-              Code</a>
+            <a href="https://github.com/jarvis1704/PlanIT.git" class="hover:underline me-4 md:me-6">Check out the Source Code</a>
           </li>
           <li>
             <a href="https://github.com/jarvis1704" class="hover:underline me-4 md:me-6">My Projects</a>
@@ -136,10 +130,9 @@
       <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
       <div class="footerlinks flex flex-wrap space-y-2 sm:space-y-0 sm:justify-between">
         <span class="space-x-4 text-lg sm:text-xl">
-          <a href="https://www.linkedin.com/in/biprangshu-das-34017427a/" id="linkedin"><i
-              class="fa-brands fa-linkedin"></i></a>
-          <a href="https://twitter.com/DasBiprangshu" id="twitter"><i class="fa-brands fa-x-twitter"></i></a>
-          <a href="https://github.com/jarvis1704" id="github"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/biprangshu-das-34017427a/" id="linkedin" class=""><i class="fa-brands fa-linkedin hover:text-white"></i></a>
+          <a href="https://twitter.com/DasBiprangshu" id="twitter" class=""><i class="fa-brands fa-x-twitter hover:text-white"></i></a>
+          <a href="https://github.com/jarvis1704" id="github" class=""><i class="fa-brands fa-github hover:text-white"></i></a>
         </span>
         <span class="block text-sm text-white sm:text-end dark:text-white my-1 ml-auto">© 2024 <a href=""
             class="hover:underline">Biprangshu Das</a>. All Rights Reserved.</span>
@@ -149,8 +142,6 @@
   </footer>
   <!--footer ends-->
 
-  <script src="js/script3.js"></script>
   <script src="js/script1.js"></script>
 </body>
-
 </html>
