added the tasks page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
                 </li>
                 <li>
-                  <a href="#"
+                  <a href="tasks.html"
                     class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Tasks</a>
                 </li>
                 <li>
@@ -136,7 +136,7 @@
           <a href="https://twitter.com/DasBiprangshu" id="twitter" class=""><i class="fa-brands fa-x-twitter hover:text-white"></i></a>
           <a href="https://github.com/jarvis1704" id="github" class=""><i class="fa-brands fa-github hover:text-white"></i></a>
         </span>
-        <span class="block text-sm text-white sm:text-end dark:text-white my-1 ml-auto">© 2024 <a href=""
+        <span class="block text-sm text-white sm:text-end dark:text-white my-1 ml-auto">© 2024 <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/"
             class="hover:underline">Biprangshu Das</a>. All Rights Reserved.</span>
       </div>
 
