added the documentation page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <ul
           class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-300 rounded-lg bg-[#668b55e0] md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-[#77A661]">
           <li>
-            <a href="#"
+            <a href="index.html"
               class="block py-2 px-3 text-white bg-[#8CA874] rounded md:bg-transparent md:text-black md:p-0 md:dark:bg-transparent"
               aria-current="page">Home</a>
           </li>
@@ -54,8 +54,8 @@
               class="z-10 hidden font-normal bg-gray-500 divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
               <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                 <li>
-                  <a href="#"
-                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
+                  <a href="documentation.html"
+                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Documentation</a>
                 </li>
                 <li>
                   <a href="tasks.html"
@@ -97,7 +97,7 @@
         class="font-normal sm:font-normal text-lg sm:text-xl lg:text-2xl opacity-70 antialiased leading-tight py-3 items-center">
         Plan your tasks, anytime, anywhere <br> and stay productive, using <span
           class="tagline text-green-600 font-bold opacity-100">PlanIT</span>.</p>
-      <a href=""><button
+      <a href="documentation.html"><button
           class="btn bg-green-600 px-5 py-3 rounded-lg text-white antialiased hover:cursor-pointer sm:transform sm:transition-all sm:duration-300 sm:ease-in-out sm:hover:scale-110 sm:active:translate-y-1 hover:bg-green-700 shadow-lg">START
           NOW</button></a>
     </div>
