changed the heading size in desktop

--- a/documentation.html
+++ b/documentation.html
@@ -115,7 +115,7 @@
       </aside>
     <div class="right px-2 sm:px-6 text-pretty text-justify tracking-tight">
       <section class="welcome my-2.5" id="1">
-        <h1 class="text-2xl font-bold my-2">Welcome to <span class="logo text-[#8ab377]">PlanIT.</span></h1>
+        <h1 class="text-2xl sm:text-3xl font-bold my-2">Welcome to <span class="logo text-[#8ab377]">PlanIT.</span></h1>
         <hr class="h-0.5 bg-gray-400 my-1">
         <p>PlanIT is a advanced Task manager web app with support of of course, <a href="tasks.html" id="tasks"
             class="cursor-pointer underline font-medium tracking-tighter sm:transfrom sm:transition-all sm:duration-100 sm:hover:text-[#679156]">Task manager with
