--- a/documentation.html
+++ b/documentation.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="Task Manager, Projects, html, javascript, tailwindcss">
   <meta name="author" content="Biprangshu Das">
   <title>Home | PlanIT</title>
+  <link rel="stylesheet" href="css/style5.css">
   <link rel="shortcut icon" href="assets/pngegg.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -20,7 +21,7 @@
   <!--navbar starts-->
   <nav class="bg-[#77A661] rounded-lg my-2 mx-3 sm:mx-10">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-      <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+      <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="assets/pngegg.png" class="h-8" alt="" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">PlanIT</span>
       </a>
