spell corrected and gave finishing touches

--- a/clock.html
+++ b/clock.html
@@ -64,7 +64,7 @@
                 </li>
                 <li>
                   <a href="reminders.html"
-                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Remainders</a>
+                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Reminders</a>
                 </li>
               </ul>
               <div class="py-1">
