--- a/documentation.html
+++ b/documentation.html
@@ -66,7 +66,7 @@
                 </li>
                 <li>
                   <a href="reminders.html"
-                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Remainders</a>
+                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Reminders</a>
                 </li>
               </ul>
               <div class="py-1">
@@ -189,7 +189,7 @@
         <article class="py-3">
           The <a href="reminders.html" class="underline tracking-tighter font-medium cursor-pointer sm:transfrom sm:transition-all sm:duration-100 sm:hover:text-[#679156]">reminder manager</a> of PlanIT is filled with features to keep you on track.
           <p class="py-2">
-          Here's how you can Navigate to the <span class="font-semibold">Reminders page:
+          Here's how you can Navigate to the <span class="font-semibold text-[#506b46]">Reminders page:</span>
           <ol class="steps list-decimal list-inside py-3">
             <li class="">Click on the <svg class="w-5 h-5 inline-block" aria-hidden="true"
                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
@@ -235,7 +235,7 @@
           you
           updated to the exact moment of the day.
           <p>
-          <h4 class="py-3"><span class="font-semibold">To navigate to clock</span>, here are the following steps you should be
+          <h4 class="py-3"><span class="font-semibold text-[#506b46]">To navigate to clock</span>, here are the following steps you should be
             following:</h4>
           <ol class="steps list-decimal list-inside py-2">
             <li class="">Click on the <svg class="w-5 h-5 inline-block" aria-hidden="true"
