--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </li>
                 <li>
                   <a href="reminders.html"
-                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Remainders</a>
+                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Reminders</a>
                 </li>
               </ul>
               <div class="py-1">
@@ -80,7 +80,7 @@
 
           <li>
             <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/"
-              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0  md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-[#8CA874] sm:hover:text-white dark:hover:text-white md:dark:hover:bg-transparent">About
+              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0  md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-[#8CA874] sm:hover:text-white dark:hover:text-white md:dark:hover:bg-transparent" target="_blank">About
               Me</a>
           </li>
         </ul>
@@ -116,31 +116,31 @@
         </a>
         <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-white sm:mb-0 dark:text-white">
           <li>
-            <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline me-4 md:me-6">About
+            <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline me-4 md:me-6" target="_blank">About
               Me</a>
           </li>
           <li>
-            <a href="https://github.com/jarvis1704/PlanIT.git" class="hover:underline me-4 md:me-6">Check out the Source
+            <a href="https://github.com/jarvis1704/PlanIT.git" class="hover:underline me-4 md:me-6" target="_blank">Check out the Source
               Code</a>
           </li>
           <li>
-            <a href="https://github.com/jarvis1704" class="hover:underline me-4 md:me-6">My Projects</a>
+            <a href="https://github.com/jarvis1704" class="hover:underline me-4 md:me-6" target="_blank">My Projects</a>
           </li>
           <li>
-            <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline">Reach Me</a>
+            <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline" target="_blank">Reach Me</a>
           </li>
         </ul>
       </div>
       <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
       <div class="footerlinks flex flex-wrap space-y-2 sm:space-y-0 sm:justify-between">
         <span class="space-x-4 text-lg sm:text-xl">
-          <a href="https://www.linkedin.com/in/biprangshu-das-34017427a/" id="linkedin"><i
+          <a href="https://www.linkedin.com/in/biprangshu-das-34017427a/" id="linkedin" target="_blank"><i
               class="fa-brands fa-linkedin"></i></a>
-          <a href="https://twitter.com/DasBiprangshu" id="twitter"><i class="fa-brands fa-x-twitter"></i></a>
-          <a href="https://github.com/jarvis1704" id="github"><i class="fa-brands fa-github"></i></a>
+          <a href="https://twitter.com/DasBiprangshu" id="twitter" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+          <a href="https://github.com/jarvis1704" id="github" target="_blank"><i class="fa-brands fa-github"></i></a>
         </span>
         <span class="block text-sm text-white sm:text-end dark:text-white my-1 ml-auto">© 2024 <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/"
-            class="hover:underline">Biprangshu Das</a>. All Rights Reserved.</span>
+            class="hover:underline" target="_blank">Biprangshu Das</a>. All Rights Reserved.</span>
       </div>
 
     </div>
