--- a/reminders.html
+++ b/reminders.html
@@ -10,7 +10,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style3.css">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Remainders| PlanIT</title>
+  <title>Reminders| PlanIT</title> target="_blank"
 </head>
 
 <body class="bg-gray-200 dark:bg-gray-300">
@@ -62,7 +62,7 @@
                 </li>
                 <li>
                   <a href="reminders.html"
-                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Remainders</a>
+                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Reminders</a>
                 </li>
               </ul>
               <div class="py-1">
@@ -79,7 +79,7 @@
 
           <li>
             <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/"
-              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0  md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-[#8CA874] sm:hover:text-white dark:hover:text-white md:dark:hover:bg-transparent">About
+              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0  md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-[#8CA874] sm:hover:text-white dark:hover:text-white md:dark:hover:bg-transparent" target="_blank">About
               Me</a>
           </li>
         </ul>
@@ -90,20 +90,20 @@
   <!--main starts-->
   <main class=" flex flex-col h-full w-screen px-1">
     <section class="reminderadder flex items-center justify-center sm:justify-center sm:items-center space-x-5 px-3 py-2 my-5">
-      <input type="text" placeholder="Add note to Remainders. Click add to save" maxlength="100" minlength="1" class="sm:w-1/2 px-5 py-2 rounded-lg border-black active:border focus:outline-none focus:outline-blue-400" id="remindertext">
+      <input type="text" placeholder="Add note to Reminders. Click add to save" maxlength="100" minlength="1" class="sm:w-1/2 px-5 py-2 rounded-lg border-black active:border focus:outline-none focus:outline-blue-400" id="remindertext">
       <button type="submit" id="reminderadd" class="px-4 py-2 bg-green-600 rounded-lg mr-3 text-white transform transition-all ease-in-out duration-300 hover:bg-green-700 active:translate-y-1">Add</button>
     </section>
     <hr class="bg-gray-400 h-0.5 rounded-md my-4">
     <section class="currentreminder my-5">
       <div class="flex flex-col items-center text-center space-y-2" id="reminderarea">
-        <p class="flex text-start w-screen px-2 text-gray-500">Current Remainders: </p>
+        <p class="flex text-start w-screen px-2 text-gray-500">Current Reminders: </p>
         <!-- <div class="reminder mx-auto w-full outline-blue-500 rounded-md px-5 py-2 font-serif bg-blue-200 my-5 flex space-x-6"><input type="checkbox" class="done mr-7" name="done">This is a sample reminder</div> -->
       </div>
     </section>
     <hr class="bg-gray-400 h-0.5 rounded-md my-4">
     <section class="donereminder my-3">
       <div class="flex flex-col items-center text-center space-y-2" id="completedreminder">
-        <p class="flex text-start w-screen px-2 text-gray-500">Done Remainders: </p>
+        <p class="flex text-start w-screen px-2 text-gray-500">Done Reminders: </p>
         <!-- <div class="donereminder mx-auto w-full text-left outline-blue-500 rounded-md px-5 sm:px-20 py-2 font-serif line-through text-gray-300 bg-green-100 my-5">${reminder}</div> -->
       </div>
     </section>
@@ -120,31 +120,31 @@
         </a>
         <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-white sm:mb-0 dark:text-white">
           <li>
-            <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline me-4 md:me-6">About
+            <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline me-4 md:me-6" target="_blank">About
               Me</a>
           </li>
           <li>
-            <a href="https://github.com/jarvis1704/PlanIT.git" class="hover:underline me-4 md:me-6">Check out the Source
+            <a href="https://github.com/jarvis1704/PlanIT.git" class="hover:underline me-4 md:me-6" target="_blank">Check out the Source
               Code</a>
           </li>
           <li>
-            <a href="https://github.com/jarvis1704" class="hover:underline me-4 md:me-6">My Projects</a>
+            <a href="https://github.com/jarvis1704" class="hover:underline me-4 md:me-6" target="_blank">My Projects</a>
           </li>
           <li>
-            <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline">Reach Me</a>
+            <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline" target="_blank">Reach Me</a>
           </li>
         </ul>
       </div>
       <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
       <div class="footerlinks flex flex-wrap space-y-2 sm:space-y-0 sm:justify-between">
         <span class="space-x-4 text-lg sm:text-xl">
-          <a href="https://www.linkedin.com/in/biprangshu-das-34017427a/" id="linkedin"><i
+          <a href="https://www.linkedin.com/in/biprangshu-das-34017427a/" id="linkedin" target="_blank"><i
               class="fa-brands fa-linkedin"></i></a>
-          <a href="https://twitter.com/DasBiprangshu" id="twitter"><i class="fa-brands fa-x-twitter"></i></a>
-          <a href="https://github.com/jarvis1704" id="github"><i class="fa-brands fa-github"></i></a>
+          <a href="https://twitter.com/DasBiprangshu" id="twitter" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+          <a href="https://github.com/jarvis1704" id="github" target="_blank"><i class="fa-brands fa-github"></i></a>
         </span>
         <span class="block text-sm text-white sm:text-end dark:text-white my-1 ml-auto">© 2024 <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/"
-            class="hover:underline">Biprangshu Das</a>. All Rights Reserved.</span>
+            class="hover:underline" target="_blank">Biprangshu Das</a>. All Rights Reserved.</span>
       </div>
 
     </div>
