fixed a targrt glich

--- a/reminders.html
+++ b/reminders.html
@@ -10,7 +10,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style3.css">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Reminders| PlanIT</title> target="_blank"
+  <title>Reminders| PlanIT</title>
 </head>
 
 <body class="bg-gray-200 dark:bg-gray-300">
